# sht3x-rs

./: Cargo.toml
